tests/ui/internal_world_query_plan.rs
use moirai::world::query::spec;